@@ -16,6 +16,7 @@ Revision history for Rex
  [NEW FEATURES]
 
  [REVISION]
+ - Set Travis CI root build job options explicitly
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
